reuse memory arena, add profiling test class
Signed-off-by: garyschulte <garyschulte@gmail.com>